# brewplok

./: CMakeLists.txt  DS18B20.cpp  DS18B20.h  Page1Form.qml  Page2Form.qml  TempPanel.ui.qml  brewplok_en_150.ts  data.cpp  data.h  main.cpp  main.qml  qml.qrc  temperature_controller.cpp  temperature_controller.h  temperature_sensor.cpp  temperature_sensor.h  temperaturecontroller.cpp  temperaturecontroller.h
proto/: session.proto
